--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"ConnorBernard.dev",
     "short_name":"ConnorBernard.dev",
-    "theme_color":"#4DB8FF",
+    "theme_color":"#000000",
     "background_color":"#000000",
     "display":"standalone",
     "start_url":"/",
