added cache control headers, modified accent color for contrast readability, linked form labels, and transitioned footer images to webp from png

--- a/firebase.json
+++ b/firebase.json
@@ -18,5 +18,16 @@
   },
   "remoteconfig": {
     "template": "remoteconfig.template.json"
-  }
+  },
+  "headers": [
+    {
+      "source": "**/*.@(webp|png|jpg|jpeg|gif)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "max-age=7200"
+        }
+      ]
+    }
+  ]
 }
