added js compression script and updated experience

--- a/public/.vscode/settings.json
+++ b/public/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "workbench.colorCustomizations":{
         
-    }
+    },
+    "cSpell.words": [
+        "resplit",
+        "tablefmt",
+        "termcolor",
+        "Unmarks"
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "python.formatting.provider": "none"
 }
